# rurichess

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/chess/: CMakeLists.txt  bitboard  bitboard.cpp  bitboard.h  board.cpp  board.h  constant.h  types.h
src/chess/include/: bitboard.h  board.h  pieces.h  types.h
src/chess/src/: bitboard.cpp  board.cpp  pieces.cpp
src/display/: CMakeLists.txt
src/display/include/: window.h
src/display/src/: window.cpp
tests/: CMakeLists.txt  TestBitBoard.cpp  TestPiece.cpp  test.cpp
